--- a/ExcelWeb.WebUI/Views/_ViewImports.cshtml
+++ b/ExcelWeb.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using ExcelWeb.WebUI
-@using ExcelWeb.WebUI.Models
+@using ExcelWeb.WebUI.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
