--- a/ExcelWeb.WebUI/Views/Excel/AddFormData.cshtml
+++ b/ExcelWeb.WebUI/Views/Excel/AddFormData.cshtml
@@ -12,6 +12,6 @@
             <input asp-for="File" class="uk-button uk-button-default" />
             <div><span asp-validation-for="File" class="uk-text-danger"></span></div>
         </div>
-        <button type="submit" class="uk-button uk-button-primary">Upload</button>
+        <button type="submit" class="uk-button uk-button-primary">Convert</button>
     </form>
 </div>
